# cpp-generator

./: .gitmodules  CMakeLists.txt  README.md
documentation/: Doxyfile  README.md
include/dynamic_static/: cpp-generator.hpp
include/dynamic_static/cpp-generator/: ascii-grid.hpp  cpp-base-type.hpp  cpp-case.hpp  cpp-compile-guard.hpp  cpp-declaration.hpp  cpp-documentation.hpp  cpp-element-collection.hpp  cpp-element.hpp  cpp-enum.hpp  cpp-enumerator.hpp  cpp-file.hpp  cpp-file.pair.hpp  cpp-function.hpp  cpp-namespace.hpp  cpp-parameter.hpp  cpp-source-block-ex.hpp  cpp-source-block.hpp  cpp-source-block.option.hpp  cpp-string-element.hpp  cpp-structure.hpp  cpp-switch.hpp  cpp-template.hpp  cpp-variable.hpp  defines.hpp  error.hpp  file.hpp  source-block.hpp  stream-counter.hpp  stream-filter.hpp  stream-tab.hpp  tab.hpp
source/dynamic_static/cpp-generator/: cpp-base-type.cpp  cpp-case.cpp  cpp-compile-guard.cpp  cpp-declaration.cpp  cpp-documentation.cpp  cpp-element.cpp  cpp-enum.cpp  cpp-enumerator.cpp  cpp-file.cpp  cpp-file.pair.cpp  cpp-function.cpp  cpp-namespace.cpp  cpp-parameter.cpp  cpp-source-block-ex.cpp  cpp-source-block.cpp  cpp-source-block.option.cpp  cpp-source-element.cpp  cpp-source-element.hpp  cpp-source-region.cpp  cpp-source-region.hpp  cpp-source-tag.cpp  cpp-source-tag.hpp  cpp-structure.cpp  cpp-switch.cpp  cpp-template.cpp  cpp-variable.cpp  error.cpp  file.cpp  source-block.cpp  source-element.cpp  source-element.hpp  source-region.cpp  source-region.hpp  source-tag.cpp  source-tag.hpp  stream-counter.cpp  stream-filter.cpp  stream-tab.cpp  stream-writer.cpp  stream-writer.hpp  (+2 more)
tests/: cpp-case.tests.cpp  cpp-compile-guard.tests.cpp  cpp-declaration.tests.cpp  cpp-documentation.tests.cpp  cpp-enum.tests.cpp  cpp-enumerator.tests.cpp  cpp-function.collection.tests.cpp  cpp-function.tests.cpp  cpp-namespace.tests.cpp  cpp-parameter.tests.cpp  cpp-source-block.tests.cpp  cpp-source-region.tests.cpp  cpp-source-tag.tests.cpp  cpp-structure.tests.cpp  cpp-switch.tests.cpp  cpp-template.tests.cpp  error.tests.cpp  file.tests.cpp  main.cpp  source-block.tests.cpp  source-region.tests.cpp  source-tag.tests.cpp  string.tests.cpp
